<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_bottom_sheet_create_file"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="@dimen/_10sdp"
        android:rowCount="2"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <!-- Item 1 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/_12sdp"
            android:drawablePadding="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/title_img_to_pdf"
            app:drawableTopCompat="@drawable/ic_img_to_pdf" />

        <!-- Item 2 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginBottom="@dimen/_12sdp"
            android:drawablePadding="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"

            android:gravity="center"
            android:text="@string/title_scan_pdf"
            app:drawableTopCompat="@drawable/ic_scanner" />

        <!-- Item 3 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:drawablePadding="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/title_merge_file"
            app:drawableTopCompat="@drawable/ic_merger_pdf" />

        <!-- Item 4 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:drawablePadding="@dimen/_6sdp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/title_create_pdf"
            app:drawableTopCompat="@drawable/ic_create_pdf" />


    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>