<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/llBottomSheet"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/llBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/btnAllFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_bottom_nav_1"
            android:textAlignment="center"
            android:textColor="@color/color_80000000"
            android:textSize="@dimen/_8sdp"
            app:drawableTopCompat="@drawable/ic_file" />


        <TextView
            android:id="@+id/btnRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_bottom_nav_2"
            android:textAlignment="center"
            android:textColor="@color/color_80000000"
            android:textSize="@dimen/_8sdp"
            app:drawableTopCompat="@drawable/ic_recent" />


        <View
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp" />


        <TextView
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_bottom_nav_3"
            android:textAlignment="center"
            android:textColor="@color/color_80000000"
            android:textSize="@dimen/_8sdp"
            app:drawableTopCompat="@drawable/ic_favourites" />


        <TextView
            android:id="@+id/btnTools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_14sdp"
            android:layout_weight="1"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_bottom_nav_4"
            android:textAlignment="center"
            android:textColor="@color/color_80000000"
            android:textSize="@dimen/_8sdp"
            app:drawableTopCompat="@drawable/ic_tools" />

    </LinearLayout>

    <ImageView
        android:id="@+id/btnScanner"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/bg_radiur_red"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_add"
        android:elevation="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/llBottomSheet"
        app:layout_constraintEnd_toEndOf="@+id/llBottomSheet"
        app:layout_constraintStart_toStartOf="@+id/llBottomSheet"
        app:layout_constraintTop_toTopOf="@+id/llBottomSheet"
        app:tint="@color/white" />


</androidx.constraintlayout.widget.ConstraintLayout>