<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgOke"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/ic_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/title_create_file_success"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgOke" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ViewFile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFile"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_70sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_6sdp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgFile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/pdf_ic" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtTools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tools"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:paddingHorizontal="@dimen/_3sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_6sdp"
                app:layout_constraintBottom_toBottomOf="@+id/cvFile"
                app:layout_constraintEnd_toEndOf="@+id/cvFile"
                tools:text="PDF" />

            <TextView
                android:id="@+id/txtNameFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:maxWidth="@dimen/_160sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toEndOf="@+id/cvFile"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="PDF Scanner.123" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/color_80000000"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintStart_toStartOf="@+id/txtNameFile"
                app:layout_constraintTop_toBottomOf="@+id/txtNameFile"
                tools:text="22 March 2025" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/color_80000000"
                android:textSize="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="@+id/txtDate"
                app:layout_constraintStart_toEndOf="@+id/txtDate"
                app:layout_constraintTop_toTopOf="@+id/txtDate"
                tools:text="09:00 AM" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btnOpen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/bg_button_open"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:padding="@dimen/_2sdp"
        android:text="Open"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ViewFile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/btnOpen">

        <TextView
            android:id="@+id/btnMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_mail"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_mail"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_favorite_create_file_success"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_favourite"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_share_create_file_success"
            android:drawablePadding="@dimen/_4sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text_share"
            android:textAlignment="center"
            android:textColor="@color/black" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>