<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_50">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_dialog_1_edt"
        android:padding="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_title_delete_dialog"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvFile"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <ImageView
                android:id="@+id/imgFile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:src="@drawable/pdf_ic" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtTools"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_tools"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/_3sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/cvFile"
            app:layout_constraintEnd_toEndOf="@+id/cvFile"
            tools:text="PDF" />

        <TextView
            android:id="@+id/txtNameFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:maxWidth="@dimen/_160sdp"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@+id/cvFile"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            tools:text="PDF Scanner.123" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/color_80000000"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="@+id/txtNameFile"
            app:layout_constraintTop_toBottomOf="@+id/txtNameFile"
            tools:text="22 March 2025" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/color_80000000"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/txtDate"
            app:layout_constraintStart_toEndOf="@+id/txtDate"
            app:layout_constraintTop_toTopOf="@+id/txtDate"
            tools:text="09:00 AM" />

        <TextView
            android:id="@+id/txtPositive"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_button_positive"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:padding="@dimen/_4sdp"
            android:text="@string/text_delete"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtNegative"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTime" />


        <TextView
            android:id="@+id/txtNegative"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:padding="@dimen/_4sdp"
            android:textAlignment="center"
            android:textColor="@color/black_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtPositive"
            app:layout_constraintTop_toBottomOf="@+id/txtTime"
            android:text="@string/text_cancel" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>